# QTQStackedwidgetMultipleUIs

./: CMakeLists.txt  form1.cpp  form1.h  form1.ui  form2.ui  form3.ui  form4.ui  form5.cpp  form5.ui  form6.cpp  form6.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mdiwithstacked.pro
